--- a/SOMS/Views/userPageView.xaml
+++ b/SOMS/Views/userPageView.xaml
@@ -6,7 +6,73 @@
         xmlns:local="clr-namespace:SOMS"
         mc:Ignorable="d"
         Title="userPageView" Height="450" Width="800">
-    <Grid Margin="0,0,0,20">
+    <StackPanel Orientation="Vertical">
+        <GroupBox Header="User Form" Margin="10">
+            <Grid Height="150">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Label Content="Id" HorizontalAlignment="Left" 
+                       VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="0"/>
+                <TextBlock Grid.Row="0" Grid.Column="1" x:Name="TextBoxId" Height="27" 
+                       Text="{Binding Path=StudentRecord.Name, Mode=TwoWay}"  Margin="5"  Width="300" HorizontalAlignment="Left"/>
+                <Label Content="Username" HorizontalAlignment="Left" VerticalContentAlignment="Center" 
+                       Grid.Row="1" Grid.Column="0"/>
+                <TextBox Grid.Row="1" Grid.Column="1" x:Name="TextBoxAge" Height="27" 
+                       Text="{Binding Path=StudentRecord.Age, Mode=TwoWay}" Margin="5,5,0,5" Width="300" HorizontalAlignment="Left"/>
+                <Label Content="Password" HorizontalAlignment="Left" VerticalContentAlignment="Center" 
+                       Grid.Row="2" Grid.Column="0" />
+                <TextBox Grid.Row="2" Grid.Column="1" x:Name="TextBoxAddress" Height="27" 
+                       Text="{Binding Path=StudentRecord.Address, Mode=TwoWay}" Margin="5" Width="300" HorizontalAlignment="Left"/>
+                <Label Content="Status" HorizontalAlignment="Left" VerticalContentAlignment="Center" 
+                       Grid.Row="3" Grid.Column="0" />
+                <TextBox Grid.Row="3" Grid.Column="1" x:Name="TextBoxContact" Height="27"
+                       Text="{Binding Path=StudentRecord.Contact, Mode=TwoWay}" Margin="5" Width="300" HorizontalAlignment="Left"/>
+            </Grid>
+        </GroupBox>
+        <StackPanel Height="40" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button x:Name="ButtonAdd" Content="Add" Height="30" Width="80" 
+             Margin="5,0,5,0"/>
+            <Button x:Name="ButtonSave" Content="Update" Height="30" Width="80"
+                  />
+            <Button x:Name="ButtonCancel" Content="Cancel" Height="30" Width="80" 
+                   Margin="5,0,10,0"/>
+        </StackPanel>
+        <StackPanel Height="210">
+            <DataGrid x:Name="DataGridStudents" AutoGenerateColumns="False"
+                      ItemsSource="{Binding userList}" CanUserAddRows="False" Height="200" Margin="10">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Id" Binding="{Binding Path=Id}"  Width="100"  IsReadOnly="True"/>
+                    <DataGridTextColumn Header="Username" Binding="{Binding Path=Username}" Width="100"  IsReadOnly="True"/>
+                    <DataGridTextColumn Header="Password" Binding="{Binding Path=Password}" Width="100"  IsReadOnly="True"/>
+                    <DataGridTextColumn Header="Status" Binding="{Binding Path=Status}" Width="100" IsReadOnly="True"/>
+                    <DataGridTemplateColumn Width="50">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Select" x:Name="ButtonEdit"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn Width="50">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Delete" x:Name="ButtonDelete"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+        </StackPanel>
+    </StackPanel>
+
+    <!--<Grid Margin="0,0,0,20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -17,13 +83,23 @@
 
         </DataGrid>
         
-        <!-- Textboxes and labels for user details -->
+        -->
+    <!-- Textboxes and labels for user details -->
+    <!--
         <TextBox Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="80,7,0,0" Name="txtUserId" VerticalAlignment="Top" Width="178" Visibility="Hidden"/>
-        <!-- Other TextBoxes and Labels for User details -->
+        -->
+    <!-- Other TextBoxes and Labels for User details -->
+    <!--
         <Button Content="Update" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="310,40,0,0" Name="btnUpdate" VerticalAlignment="Top" Width="141" Visibility="Hidden" />
-        <!-- Textboxes and labels for user's City, State, and Country -->
+        -->
+    <!-- Textboxes and labels for user's City, State, and Country -->
+    <!--
         <TextBox Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="80,143,0,0" Name="txtCity" VerticalAlignment="Top" Width="178" Visibility="Hidden"/>
-        <!-- Labels for Country, City, State -->
-        <!-- Textboxes and labels for Country, City, State -->
-    </Grid>
+        -->
+    <!-- Labels for Country, City, State -->
+    <!-- Textboxes and labels for Country, City, State -->
+    <!--
+    </Grid>-->
+
+
 </Window>
