--- a/SOMS/Views/orderSubsystemPageView.xaml
+++ b/SOMS/Views/orderSubsystemPageView.xaml
@@ -130,7 +130,7 @@
                         <!--Row 1 Name-->
                         <Label Content="Total (RM)" HorizontalAlignment="Center" VerticalContentAlignment="Center" Grid.Row="0" Width="70" Height="30"/>
                         <TextBox Background="LightGray" IsReadOnly="True"  Grid.Row="0" Grid.Column="1" x:Name="TxtBxOrderTotal" Margin="0,5,0,3" Width="235" HorizontalAlignment="Center" Grid.ColumnSpan="2" Height="22"/>
-                        <Button Grid.Column="3" x:Name="ButtonReceipt" Content="Make Receipt" Height="21" Margin="0,4,0,4" Background="#FFDDDDDD"/>
+                        <Button Grid.Column="3" x:Name="ButtonReceipt" Content="Make Receipt" Height="21" Margin="0,6,0,0" Background="#FFDDDDDD" VerticalAlignment="Top"/>
                     </Grid>
                 </GroupBox>
                 <!--<Buttons Panel/>-->
@@ -167,7 +167,6 @@
                         </DataGrid.Columns>
                     </DataGrid>
                 </StackPanel>
-
             </StackPanel>
         </TabItem>
         <!--Item Page-->
