--- a/SOMS/Views/orderListView.xaml
+++ b/SOMS/Views/orderListView.xaml
@@ -13,7 +13,7 @@
         </Grid.RowDefinitions>
         <StackPanel HorizontalAlignment="Left" Height="450">
             <!--<First GroupBox/>-->
-            <GroupBox Header="Search" Margin="3,3,3,3" Width="510" Height="60" BorderBrush="#FF0C0D0E">
+            <GroupBox Header="Search" Margin="3,3,3,3" Width="600" Height="60" BorderBrush="#FF0C0D0E">
                 <Grid Height="35">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="1*"/>
@@ -23,15 +23,16 @@
                         <ColumnDefinition Width="5"/>
                         <ColumnDefinition Width="230"/>
                         <ColumnDefinition Width="110"/>
+                        <ColumnDefinition Width="90"/>
                         <ColumnDefinition Width="100"/>
-                      
                     </Grid.ColumnDefinitions>
                     <!--Row 1 Column 1 Sum-->
-                    <Label Content="Details" HorizontalAlignment="Center" VerticalContentAlignment="Center" Grid.Row="0" Width="50"/>
-                    <TextBox Grid.Row="0" Grid.Column="2" x:Name="TxtBxDetails" Height="30" Width="200" HorizontalAlignment="Left"/>
+                    <Label Content="Detail" HorizontalAlignment="Center" VerticalContentAlignment="Center" Grid.Row="0" Width="50"/>
+                    <TextBox Grid.Row="0" Grid.Column="2" x:Name="TxtBxDetail" Height="30" Width="200" HorizontalAlignment="Left"/>
                     <!--Row 1 Column 4 Button-->
                     <Button Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="ButtonFindID" Content="Find By Reference" Height="21" Background="#FFDDDDDD"/>
                     <Button Grid.Column="4" x:Name="ButtonFindDate" Content="Find By Date" Height="21" Background="#FFDDDDDD" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                    <Button Grid.Column="5" x:Name="ButtonAllOrder" Content="Get All Order" Height="21" Background="#FFDDDDDD" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                 </Grid>
             </GroupBox>
         </StackPanel>
