--- a/SOMS/Views/salesPageView.xaml
+++ b/SOMS/Views/salesPageView.xaml
@@ -20,23 +20,24 @@
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="70"/>
-                        <ColumnDefinition Width="10*"/>
+                        <ColumnDefinition Width="10"/>
                         <ColumnDefinition Width="90*"/>
-                        <ColumnDefinition Width="30*"/>
-                        <ColumnDefinition Width="10*"/>
-                        <ColumnDefinition Width="70*"/>
-                        <ColumnDefinition Width="30*"/>
-                        <ColumnDefinition Width="10*"/>
+                        <ColumnDefinition Width="40"/>
+                        <ColumnDefinition Width="10"/>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="40"/>
+                        <ColumnDefinition Width="10"/>
+                        <ColumnDefinition Width="120"/>
                         <ColumnDefinition Width="70*"/>
                         <ColumnDefinition Width="70*"/>
                         <ColumnDefinition Width="70*"/>
                     </Grid.ColumnDefinitions>
                     <!--Row 1 Column 1 Sum-->
                     <Label Content="Sum (RM)" HorizontalAlignment="Center" VerticalContentAlignment="Center" Grid.Row="0" Width="70"/>
-                    <TextBox Background="LightGray" IsReadOnly="True"  Grid.Row="0" Grid.Column="1" x:Name="TxtBxSum" Margin="-10,5,0,3" Width="135" HorizontalAlignment="Center" Grid.ColumnSpan="2"/>
+                    <TextBox Background="LightGray" IsReadOnly="True"  Grid.Row="0" Grid.Column="1" x:Name="TxtBxSum" Margin="0,5,0,3" Width="135" HorizontalAlignment="LEft" Grid.ColumnSpan="2"/>
                     <!--Row 1 Column 2 Date From-->
-                    <Label Content="From" HorizontalAlignment="Center" VerticalContentAlignment="Center" Grid.Row="0" Grid.Column="3" Width="50"/>
-                    <DatePicker Grid.Row="0" Grid.Column="5" x:Name="TxtBxDateFrom" Margin="-55,5,0,3" Width="110" HorizontalAlignment="Center">
+                    <Label Content="From" HorizontalAlignment="Center" VerticalContentAlignment="Center" Grid.Row="0" Grid.Column="3" Width="40"/>
+                    <DatePicker Grid.Row="0" Grid.Column="5" x:Name="TxtBxDateFrom" Margin="0,5,0,3" Width="110" HorizontalAlignment="Left">
                         <DatePicker.BorderBrush>
                             <LinearGradientBrush EndPoint="0.5,0" StartPoint="0.5,1">
                                 <GradientStop Color="#FFA3AEB9"/>
@@ -47,8 +48,8 @@
                         </DatePicker.BorderBrush>
                     </DatePicker>
                     <!--Row 1 Column 3 Date to-->
-                    <Label Content="To" HorizontalAlignment="Center" VerticalContentAlignment="Center" Grid.Row="0" Grid.Column="6" Width="50"/>
-                    <DatePicker Grid.Row="0" Grid.Column="8" x:Name="TxtBxDateTo" Margin="-55,5,0,3" Width="110" HorizontalAlignment="Center">
+                    <Label Content="To" HorizontalAlignment="Center" VerticalContentAlignment="Center" Grid.Row="0" Grid.Column="6" Width="30"/>
+                    <DatePicker Grid.Row="0" Grid.Column="8" x:Name="TxtBxDateTo" Margin="0,5,0,3" Width="110" HorizontalAlignment="Left">
                         <DatePicker.BorderBrush>
                             <LinearGradientBrush EndPoint="0.5,0" StartPoint="0.5,1">
                                 <GradientStop Color="#FFA3AEB9"/>
@@ -59,8 +60,9 @@
                         </DatePicker.BorderBrush>
                     </DatePicker>
                     <!--Row 1 Column 4 Button-->
-                    <Button Grid.Column="9" Width="70" x:Name="ButtonFind" Content="Find" Height="21" Margin="-50,6,0,0" Background="#FFDDDDDD" VerticalAlignment="Top"/>
-                    <Button Grid.Column="10" Width="100" x:Name="ButtonReport" Content="Generate Report" Height="21" Margin="-50,6,0,0" Background="#FFDDDDDD" VerticalAlignment="Top"/>
+                    <Button Grid.Column="9" Width="80" x:Name="ButtonFind" Content="Find By Date" Height="21" Margin="0,6,0,0" Background="#FFDDDDDD" VerticalAlignment="Top"/>
+                    <Button Grid.Column="10" Width="80" x:Name="ButtonSales" Content="Get All Sales" Height="21" Margin="0,6,0,0" Background="#FFDDDDDD" VerticalAlignment="Top"/>
+                    <Button Grid.Column="11" Width="100" x:Name="ButtonReport" Content="Generate Report" Height="21" Margin="0,6,0,0" Background="#FFDDDDDD" VerticalAlignment="Top"/>
                 </Grid>
             </GroupBox>
         </StackPanel>
